--- a/src/main/resources/com/example/cs213banktellergui/bankteller-view.fxml
+++ b/src/main/resources/com/example/cs213banktellergui/bankteller-view.fxml
@@ -117,13 +117,13 @@
                         <Insets bottom="12.0" left="12.0" right="12.0" top="12.0" />
                      </padding>
                      <children>
-                        <RadioButton id="newBrunswickRadio" mnemonicParsing="false" text="New Brunswick">
+                        <RadioButton id="newBrunswickRadio" mnemonicParsing="false" text="0">
                            <toggleGroup>
                               <ToggleGroup fx:id="campus" />
                            </toggleGroup>
                         </RadioButton>
-                        <RadioButton id="newarkRadio" mnemonicParsing="false" text="Newark" toggleGroup="$campus" />
-                        <RadioButton id="camdenRadio" mnemonicParsing="false" text="Camden" toggleGroup="$campus" />
+                        <RadioButton id="newarkRadio" mnemonicParsing="false" text="1" toggleGroup="$campus" />
+                        <RadioButton id="camdenRadio" mnemonicParsing="false" text="2" toggleGroup="$campus" />
                      </children>
                   </HBox>
                </children>
