--- a/src/main/resources/com/example/cs213banktellergui/bankteller-view.fxml
+++ b/src/main/resources/com/example/cs213banktellergui/bankteller-view.fxml
@@ -33,7 +33,7 @@
          <children>
             <VBox fx:id="printPane" prefWidth="100.0" visible="false">
                <children>
-                  <RadioButton maxHeight="37.0" maxWidth="1.7976931348623157E308" minHeight="36.0" mnemonicParsing="false" style="-fx-background-color: #eee;" text="Print by Account Type">
+                  <RadioButton maxHeight="37.0" maxWidth="1.7976931348623157E308" minHeight="36.0" mnemonicParsing="false" style="-fx-background-color: #eee;" text="Print by Account Type" id="printByType">
                      <toggleGroup >
                         <ToggleGroup fx:id="printGroup"/>
                      </toggleGroup>
@@ -41,17 +41,17 @@
                         <Insets left="4.0" right="4.0" />
                      </padding>
                   </RadioButton>
-                  <RadioButton maxHeight="37.0" maxWidth="1.7976931348623157E308" minHeight="36.0" mnemonicParsing="false" text="Print by Account Interest" toggleGroup="$printGroup">
+                  <RadioButton maxHeight="37.0" maxWidth="1.7976931348623157E308" minHeight="36.0" mnemonicParsing="false" text="Print by Account Interest" toggleGroup="$printGroup" id="printByInterest">
                      <padding>
                         <Insets left="4.0" right="4.0" />
                      </padding>
                   </RadioButton>
-                  <RadioButton maxHeight="37.0" maxWidth="1.7976931348623157E308" minHeight="36.0" mnemonicParsing="false" style="-fx-background-color: #eee;" text="Print All" toggleGroup="$printGroup">
+                  <RadioButton maxHeight="37.0" maxWidth="1.7976931348623157E308" minHeight="36.0" mnemonicParsing="false" style="-fx-background-color: #eee;" text="Print All" toggleGroup="$printGroup" id="printAll">
                      <padding>
                         <Insets left="4.0" right="4.0" />
                      </padding>
                   </RadioButton>
-                  <RadioButton maxHeight="37.0" maxWidth="1.7976931348623157E308" minHeight="36.0" mnemonicParsing="false" text="Update Balances" toggleGroup="$printGroup">
+                  <RadioButton maxHeight="37.0" maxWidth="1.7976931348623157E308" minHeight="36.0" mnemonicParsing="false" text="Update Balances" toggleGroup="$printGroup" id="updateBalances">
                      <padding>
                         <Insets left="4.0" right="4.0" />
                      </padding>
@@ -76,14 +76,14 @@
                   </FlowPane>
                   <HBox id="accountTypePane" prefWidth="200.0" spacing="24.0">
                      <children>
-                        <RadioButton id="checkingRadio" mnemonicParsing="false" text="Checking" selected="true">
+                        <RadioButton fx:id="checkingRadio" mnemonicParsing="false" text="Checking" selected="true" onAction="#onAccountTypeChanged">
                            <toggleGroup>
                               <ToggleGroup fx:id="accountType"/>
                            </toggleGroup>
                         </RadioButton>
-                        <RadioButton id="collegeCheckingRadio" mnemonicParsing="false" text="College Checking" toggleGroup="$accountType" />
-                        <RadioButton id="savingsRadio" mnemonicParsing="false" text="Savings" toggleGroup="$accountType" />
-                        <RadioButton id="moneyMarketRadio" mnemonicParsing="false" text="Money Market" toggleGroup="$accountType" />
+                        <RadioButton fx:id="collegeCheckingRadio" mnemonicParsing="false" text="College Checking" toggleGroup="$accountType" onAction="#onAccountTypeChanged"/>
+                        <RadioButton fx:id="savingsRadio" mnemonicParsing="false" text="Savings" toggleGroup="$accountType" onAction="#onAccountTypeChanged"/>
+                        <RadioButton fx:id="moneyMarketRadio" mnemonicParsing="false" text="Money Market" toggleGroup="$accountType" onAction="#onAccountTypeChanged"/>
                      </children>
                      <padding>
                         <Insets bottom="12.0" left="12.0" right="12.0" top="12.0" />
@@ -104,7 +104,7 @@
                         <Insets bottom="12.0" left="12.0" right="12.0" top="12.0" />
                      </padding>
                   </HBox>
-                  <HBox id="loyaltyPane" prefWidth="200.0">
+                  <HBox id="loyaltyPane" prefWidth="200.0" disable="true">
                      <children>
                         <CheckBox fx:id="loyalCheckbox" mnemonicParsing="false" text="Loyal" />
                      </children>
@@ -112,7 +112,7 @@
                         <Insets bottom="12.0" left="12.0" right="12.0" top="12.0" />
                      </padding>
                   </HBox>
-                  <HBox id="campusPane" prefWidth="200.0" spacing="36.0">
+                  <HBox fx:id="campusPane" prefWidth="200.0" spacing="36.0" disable="true">
                      <padding>
                         <Insets bottom="12.0" left="12.0" right="12.0" top="12.0" />
                      </padding>
